Corrección para Móviles - Pablo
También soluciono otros errores, añado metatags, un icono, imágenes menos pesadas, etc.

--- a/index.html
+++ b/index.html
@@ -4,17 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Asociación Cantabra de Radioaficionados</title>
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="description" content="Asociación Cantabra de Radioaficionados - Comunidad de radioaficionados en Cantabria" />
     <meta name="author" content="Asociación Cantabra de Radioaficionados" />
+    <meta name="keywords" content="radioaficionados, radioafición, radioaficionado, radioaficionado sin licencia, radioaficionados españa, radioaficion cantabria, radioafición santander, equipos de radioaficionados" />
 
     <meta property="og:title" content="Asociación Cantabra de Radioaficionados" />
     <meta property="og:description" content="Comunidad de radioaficionados en Cantabria" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://asociacioncantabraradioaficion.com/assets/hero-main-new.webp" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@RadioAficionadosCantabria" />
+    <meta name="twitter:image" content="https://asociacioncantabraradioaficion.com/assets/hero-main-new.webp" />
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
